2015-06-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h: Fix compilation with --enable-tiny.

2015-06-02  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Tweak some wordings, and
	add some missing formatting to the Info document, and fix an mdash.
	* doc/syntax/debian.nanorc: Colour also an optional option.
	This addresses Debian bug #664456 reported by Shawn Landden.
	Also shorten the name of the syntax to "sources.list".
	* doc/syntax/python.nanorc: Require again that the triple quote	that
	starts a docstring is followed by some character -- it is better to
	*not* colour some strings than far too often colour far too much.
	This addresses Debian bug #785508 reported by Alexandre Detiste.

2015-05-31  Mahyar Abbaspour  <mahyar.abaspour@gmail.com>
	* src/prompt.c (get_statusbar_page_start): Prevent a floating-point
	exception when the available length for an answer becomes zero.

2015-05-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/help.c (do_help), src/prompt.c (do_yesno_prompt): Normalize
	the whitespace after the recent changes in logic.
	* src/prompt.c (do_yesno_prompt): Use 'width' instead of hardcoded
	16.  Also always first set the string and then position the cursor.
	* TODO: Mark window resizes and better file-type detection as done.
	* doc/syntax/debian.nanorc: Allow a CD name to contain any character.
	This addresses Debian bug #688892 reported by Dani Möller Montull.

2015-05-28  Mahyar Abbaspour  <mahyar.abaspour@gmail.com>
	* src/nano.c (handle_sigwinch, regenerate_screen), src/global.c,
	src/prompt.c (do_statusbar_input, get_prompt_string, do_yesno_prompt),
	src/browser.c (do_browser, browser_refresh), src/help.c (do_help),
	src/winio.c (get_key_buffer, unget_input, get_input, parse_kbinput),
	src/text.c (do_justify, do_linter), src/nano.h, src/proto.h:
	Handle a SIGWINCH (signalling a change in window size) not when it
	happens but only when checking for input.  Report the SIGWINCH via