@@ -2,20 +2,24 @@
 %define version	@VERSION@
 %define release	1
 
-Summary	: Pico editor clone with enhancements
 Name		: %{name}
 Version		: %{version}
 Release		: %{release}
+Summary		: a user-friendly editor, a Pico clone with enhancements
+
 License		: GPLv3+
 Group		: Applications/Editors
 URL		: http://www.nano-editor.org/
-Source		: http://www.nano-editor.org/dist/v2.3/%{name}-%{version}.tar.gz
+Source		: http://www.nano-editor.org/dist/v2.4/%{name}-%{version}.tar.gz
+
 BuildRoot	: %{_tmppath}/%{name}-%{version}-root
 BuildRequires	: autoconf, automake, gettext-devel, ncurses-devel, texinfo
+Requires(post)	: info
+Requires(preun)	: info
 
 %description
 GNU nano is a small and friendly text editor.  It aims to emulate the
-Pico text editor while also offering a few enhancements.
+Pico text editor while also offering several enhancements.
 
 %prep
 %setup -q
@@ -26,8 +30,16 @@ make
 
 %install
 make DESTDIR="%{buildroot}" install
-#ln -s nano %{buildroot}%{_bindir}/pico
-rm -f %{buildroot}%{_infodir}/dir
+#ln -s nano %{buildroot}/%{_bindir}/pico
+rm -f %{buildroot}/%{_infodir}/dir
+
+%post
+/sbin/install-info %{_infodir}/%{name}.info %{_infodir}/dir || :
+
+%preun
+if [ $1 = 0 ] ; then
+/sbin/install-info --delete %{_infodir}/%{name}.info %{_infodir}/dir || :
+fi
 
 %files
 %defattr(-,root,root)
